--- a/Running_001/WebContent/WEB-INF/web.xml
+++ b/Running_001/WebContent/WEB-INF/web.xml
@@ -1,56 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID" version="2.5">
-	<display-name>Running_001</display-name>
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
-
-
-
-
-	<filter>
-		<filter-name>encoding</filter-name>
-		<filter-class>firework.hyl.running.web.filter.EncodingFilter</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>encoding</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
-
-	<servlet>
-		<servlet-name>checkCode</servlet-name>
-		<servlet-class>firework.hyl.running.web.servlet.AuthImg</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>checkCode</servlet-name>
-		<url-pattern>/getCheckCode</url-pattern>
-	</servlet-mapping>
-
-	<!-- start 加载Spring IOC容器 -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
-	</context-param>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<!-- end 加载Spring IOC容器 -->
-
-	<!--start config struts2 过滤器 -->
-	<filter>
-		<filter-name>struts2</filter-name>
-		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>struts2</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<!--end struts2 过滤器 -->
-
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+  <display-name>Running_001</display-name>
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  <filter>
+    <filter-name>encoding</filter-name>
+    <filter-class>firework.hyl.running.web.filter.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>encoding</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>checkCode</servlet-name>
+    <servlet-class>firework.hyl.running.web.servlet.AuthImg</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>checkCode</servlet-name>
+    <url-pattern>/getCheckCode</url-pattern>
+  </servlet-mapping>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <filter>
+    <filter-name>struts2</filter-name>
+    <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>struts2</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <description></description>
+    <display-name>GetImgServlet</display-name>
+    <servlet-name>GetImgServlet</servlet-name>
+    <servlet-class>firework.hyl.running.web.servlet.GetImgServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetImgServlet</servlet-name>
+    <url-pattern>/GetImgServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
